# smtadapter

./: .gitignore  CMakeLists.txt  SolverAdapter.cpp  Z3Adapter.cpp  Z3Adapter.h
exlibs/z3/: Makefile
include/: Solver.h  SolverAdapter.h  Symbol.h
include/smtadapter/: SolverAdapter.h  SolverContext.h  Symbol.h
lib/: CMakeLists.txt
unittests/: CMakeLists.txt  FindLLVM.cmake  z3test.cpp
